--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -3,9 +3,9 @@ akka {
     provider = "akka.remote.RemoteActorRefProvider"
   }
   remote {
-    enabled-transports = ["akka.remote.netty.tcp"]
+    enabled-transports = ["akka.remote.netty.tcp`"]
     netty.tcp {
-      hostname = "192.168.43.240"
+      hostname = "localhost"
       port = 2552
     }
   }
