Sending remote message sample

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -3,7 +3,7 @@ akka {
     provider = "akka.remote.RemoteActorRefProvider"
   }
   remote {
-    enabled-transports = ["akka.remote.netty.tcp`"]
+    enabled-transports = ["akka.remote.netty.tcp"]
     netty.tcp {
       hostname = "localhost"
       port = 2552
